hack-fix to make the sidebar not overflow the outer wrapper div

--- a/stylesheets/parrot.css
+++ b/stylesheets/parrot.css
@@ -44,6 +44,7 @@ div#wrapper {
     margin: 0 auto;
     width: 868px;
     padding-top: 18px;
+    min-height: 500px;
 }
 
 div#header {
